# grid-wasm

./: .gitignore  AGENTS.md  Cargo.toml  index.html  package-lock.json  package.json  tsconfig.app.json
crates/grid-core/: Cargo.toml
crates/grid-core/src/: arrow_data.rs  canvas.rs  color.rs  columns.rs  defaults.rs  grid.rs  hit_test.rs  layout.rs  lib.rs  number_format.rs  theme.rs  types.rs  walk.rs
crates/grid-core/src/render/: cells.rs  header.rs  lib_utils.rs  lines.rs  mod.rs  orchestrator.rs
src/: App.css  App.tsx  grid.ts
tests/: hit-areas.spec.ts
