[package]
name = "grid-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
arrow = { version = "58", default-features = false, features = ["ipc"] }
arrow-ipc = "58"
arrow-array = "58"
arrow-schema = "58"
arrow-buffer = "58"
datafusion = { version = "53", default-features = false }
datafusion-functions = { version = "53.0.0", default-features = false, features = ["datetime_expressions"] }
# chrono's "wasmbind" feature makes Utc::now() use js_sys::Date instead of SystemTime
chrono = { version = "0.4", features = ["wasmbind"] }
# Enable the "datafusion-sql" feature on this crate to activate SQL support.
# datafusion = { version = "53", default-features = false, features = ["sql"] }
serde_json = "1"
# getrandom 0.2 needed by const-random-macro (via ahash), 0.3 needed by rand (via datafusion).
# Both require WASM-specific features that transitive deps don't enable.
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "TextMetrics",
    "Window",
    "Document",
    "Element",
    "console",
]

[profile.release]
opt-level = "s"
lto = true
